# logger

./: .gitignore  CMakeLists.txt  README.md
benchmark/: benchmark_logger.cpp
examples/: basic.cpp
include/logger/: console_sink.hpp  file_sink.hpp  formatter.hpp  log_level.hpp  log_messages.hpp  logger.hpp  null_sink.hpp  sink.hpp  test_sink.hpp
src/: console_sink.cpp  file_sink.cpp  formatter.cpp  logger.cpp  null_sink.cpp  sink.cpp  test_sink.cpp
tests/: CMakeLists.txt  test_logger_async.cpp  test_logger_levels.cpp  test_logger_mock.cpp
